--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 </head>
 
 <body>
-    <a href="./static_vis/index.html">Click here for static Visualization</a><br>
+    <a href="/CS399_Fall2021/static_vis/index.html">Click here for static Visualization</a><br>
 
-    <a href="./dynamic_vis/index.html">Click here for dyanmic Visualization</a>
+    <a href="CS399_Fall2021/dynamic_vis/index.html">Click here for dyanmic Visualization</a>
 
 
 </body>
