--- a/bar_chart_proj5/index.html
+++ b/bar_chart_proj5/index.html
@@ -26,7 +26,7 @@
         </div>
     </div>
     <br>
-    <p style="text-align: center;font-size:18px;margin-right: 60px;margin-left: 60px;">For some unfathomable reason, ~4.5% of people age 18-29 hold the sentiment that those in the middle seat should get no arm rests. Thankfully this belief seems to decline with age.</p>
+    <p style="text-align: center;font-size:18px;margin-right: 60px;margin-left: 60px;">For some unfathomable reason, <span style="font-weight:bold;color:#FF7A1F;">~4.5%</span> of people age 18-29 hold the sentiment that those in the middle seat should get no arm rests. Thankfully this belief seems to decline with age.</p>
 
 <!-- External JS libraries -->
     <script src="js/d3.min.js"></script>
