made some formatting changes

--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <head>
-<title>Data Visualization Templates</title>
+<title>Data Visualization CS399</title>
 </head>
 
 <body>
-    <a href="/CS399_Fall2021/static_vis/index.html">Click here for static Visualization</a><br>
+    <a href="/bar_chart_proj5/index.html">Click here for the bar chart.</a><br>
 
-    <a href="CS399_Fall2021/dynamic_vis/index.html">Click here for dyanmic Visualization</a>
+    <a href="/linegraph/index.html">Click here for the line graph</a>
 
+<div>
+<h2>Team Members</h2>
+<ul><li>Aidan Staunton
+    <li>Amogh Subhedar
+    <li>Hadi Alhussieni
+</ul>
+</div>
 
 </body>
 
