--- a/linegraph/index.html
+++ b/linegraph/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="description" content="">
-    <title>Star Break Coffee</title>
+    <title>Attendance Rates</title>
     <!-- Bootstrap -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- Custom styling -->
@@ -14,7 +14,7 @@
 
     <nav class="navbar navbar-default">
         <div class="container">
-            <a class="navbar-brand" href="#"><img id="logo" src="img/logo.png"></a>
+            <p style="font-family: Century Gothic,CenturyGothic,AppleGothic,sans-serif;font-size:40px;color:#63605f;">Attendance Rate for Religious Services vs Annual Income</p>
         </div>
     </nav>
 
