Add slider variables js

--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
 </head>
 
 <body>
-    <a href="/bar_chart_proj5/index.html">Click here for the bar chart.</a><br>
+    <a href="/blowup_game/index.html">Click here for the blowup game dashboard</a><br>
 
-    <a href="/linegraph/index.html">Click here for the line graph</a>
+    <a href="/bargraph_airplaneArmrests/index.html">Click here for the bar chart</a><br>
+
+    <a href="/linegraph_religionvsIncome/index.html">Click here for the line graph</a>
 
 <div>
 <h2>Team Members</h2>
