--- a/blowup_game/index.html
+++ b/blowup_game/index.html
@@ -90,7 +90,9 @@
             printValue('chanceOfBlowupFromGUI','chanceOfBlowupFromGUILabel');
             printValue('percentOfBetToBlowupFromGUI','percentOfBetToBlowupFromGUILabel');
             printValue('binNumberFromGUI','binNumberFromGUILabel');
-            printValue('kernelEpFromGUI','kernelEpFromGUILabel')
+            printValue('kernelEpFromGUI','kernelEpFromGUILabel');
+
+            loadValuesFromForm();
         }
     </script>
     </body>
