--- a/blowup_game/index.html
+++ b/blowup_game/index.html
@@ -26,41 +26,41 @@
             <div id="selections" class="row">
                 <div class="form-group">
                     <label for="formControlRange">Number of Trials: </label>
-                    <input id="numTrialsFromGUILabel" type="text" size="5"/>
+                    <input id="numTrialsFromGUILabel" type="text" onchange="setValue('numTrialsFromGUI','numTrialsFromGUILabel')" size="5"/>
                     <input type="range" class="form-control-range" name="numTrialsFromGUI" id="numTrialsFromGUI" min="10" max="200" value="20" onmousemove="printValue('numTrialsFromGUI','numTrialsFromGUILabel')" onchange="loadValuesFromForm()">
                 </div>
                 <div class="form-group">
                     <label for="formControlRange">Number of Simulations: </label>
-                    <input id="numSimsFromGUILabel" type="text" size="5"/>
+                    <input id="numSimsFromGUILabel" type="text" onchange="setValue('numSimsFromGUI','numSimsFromGUILabel')" size="5"/>
                     <input type="range" class="form-control-range" name="numSimsFromGUI" id="numSimsFromGUI" onchange="loadValuesFromForm()" min="1" max="10000" value="1000" step="1" onmousemove="printValue('numSimsFromGUI','numSimsFromGUILabel')">
                 </div>
                 <div class="form-group">
                     <label for="formControlRange">Percent to Bet (%): </label>
-                    <input id="percentToBetFromGUILabel" type="text" size="5"/>
+                    <input id="percentToBetFromGUILabel" type="text" onchange="setValue('percentToBetFromGUI','percentToBetFromGUILabel')" size="5"/>
                     <input type="range" class="form-control-range" name="percentToBetFromGUI" id="percentToBetFromGUI" min="1" max="100" value="10" step="1" onmousemove="printValue('percentToBetFromGUI','percentToBetFromGUILabel')" onchange="loadValuesFromForm()">
                 </div>
                 <div class="form-group">
                     <label for="formControlRange">Win Multiplier: </label>
-                    <input id="winMultiplierFromGUILabel" type="text" size="5"/>
+                    <input id="winMultiplierFromGUILabel" type="text" onchange="setValue('winMultiplierFromGUI','winMultiplierFromGUILabel')" size="5"/>
                     <input type="range" class="form-control-range" name="winMultiplierFromGUI" id="winMultiplierFromGUI" min="1" max="4" value="1.5" step="0.1" onmousemove="printValue('winMultiplierFromGUI','winMultiplierFromGUILabel')" onchange="loadValuesFromForm()">
                 </div>                <div class="form-group">
                     <label for="formControlRange">Chance of Blowup (%): </label>
-                    <input id="chanceOfBlowupFromGUILabel" type="text" size="5"/>
+                    <input id="chanceOfBlowupFromGUILabel" type="text" onchange="setValue('chanceOfBlowupFromGUI','chanceOfBlowupFromGUILabel')" size="5"/>
                     <input type="range" class="form-control-range" name="chanceOfBlowupFromGUI" id="chanceOfBlowupFromGUI" min="1" max="100" value="10" step="1" onmousemove="printValue('chanceOfBlowupFromGUI','chanceOfBlowupFromGUILabel')" onchange="loadValuesFromForm()">
                 </div>                
                 <div class="form-group">
                     <label for="formControlRange">Percent of Bet to Blowup (%): </label>
-                    <input id="percentOfBetToBlowupFromGUILabel" type="text" size="5"/>
+                    <input id="percentOfBetToBlowupFromGUILabel" onchange="setValue('percentOfBetToBlowupFromGUI','percentOfBetToBlowupFromGUILabel')" type="text" size="5"/>
                     <input type="range" class="form-control-range" name="percentOfBetToBlowupFromGUI" id="percentOfBetToBlowupFromGUI" min="1" max="100" value="100" step="1" onmousemove="printValue('percentOfBetToBlowupFromGUI','percentOfBetToBlowupFromGUILabel')" onchange="loadValuesFromForm()">
                 </div>                
                 <div class="form-group">
                     <label for="formControlRange">Number of Bins: </label>
-                    <input id="binNumberFromGUILabel" type="text" size="5"/>
+                    <input id="binNumberFromGUILabel" type="text" onchange="setValue('binNumberFromGUI','binNumberFromGUILabel')" size="5"/>
                     <input type="range" class="form-control-range" name="binSizeFromGUI" id="binNumberFromGUI" min="10" max="500" value="40" onmousemove="printValue('binNumberFromGUI','binNumberFromGUILabel')" onchange="loadValuesFromForm()">
                 </div>
                 <div class="form-group">
                     <label for="formControlRange">Kernel Epanechnikov: </label>
-                    <input id="kernelEpFromGUILabel" type="text" size="5"/>
+                    <input id="kernelEpFromGUILabel" type="text" onchange="setValue('kernelEpFromGUI','kernelEpFromGUILabel')" size="5"/>
                     <input type="range" class="form-control-range" name="kernelEpFromGUI" id="kernelEpFromGUI" min="1" max="1000" value="20" onmousemove="printValue('kernelEpFromGUI','kernelEpFromGUILabel')" onchange="loadValuesFromForm()">
                 </div>
             </div>
@@ -81,6 +81,14 @@
             var x = document.getElementById(textbox);
             var y = document.getElementById(sliderID);
             x.value = y.value;
+        }
+
+        function setValue(sliderID, textBox)
+        {
+            var tbx = document.getElementById(textBox);
+            var slider = document.getElementById(sliderID);
+            slider.value = tbx.value;
+            loadValuesFromForm();
         }
         window.onload = function() {
             printValue('numSimsFromGUI','numSimsFromGUILabel');
