Final Project Folders and placeholder code

--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 </head>
 
 <body>
-    <a href="/blowup_game/index.html">Click here for the blowup game dashboard</a><br>
+    <a href="http://localhost:8000/blowup_game/index.html">Click here for the blowup game dashboard</a><br>
 
-    <a href="/bargraph_airplaneArmrests/index.html">Click here for the bar chart</a><br>
+    <a href="http://localhost:8000/bargraph_airplaneArmrests/index.html">Click here for the bar chart</a><br>
 
-    <a href="/linegraph_religionvsIncome/index.html">Click here for the line graph</a>
+    <a href="http://localhost:8000/linegraph_religionvsIncome/index.html">Click here for the line graph</a><br>
 
+    <a href="http://localhost:8000/final/index.html">Click here for the profiler</a>
 <div>
 <h2>Team Members</h2>
 <ul><li>Aidan Staunton
