--- a/final/index.html
+++ b/final/index.html
@@ -15,7 +15,7 @@
 
     <nav class="navbar navbar-default">
         <div class="container">
-            <a class="navbar-brand" href="#"><img id="logo" src="img/logo.png"></a>      
+            <p style="font-family: Century Gothic,CenturyGothic,AppleGothic,sans-serif;font-size:40px;color:#404040;">Module Profiler</p> 
         </div>
     </nav>
 
