--- a/final/index.html
+++ b/final/index.html
@@ -20,7 +20,7 @@
     </nav>
 
     <!-- Bootstrap grid setup -->
-    <div class="container">
+    <div class="Bontainer">
         <div class="row">
             <div id="chart-area"></div>
         </div>
@@ -35,15 +35,27 @@
 
 <div style="text-align:center;">
 
-    <input type="checkbox" id="enableTopValues" name="enableTopValues" checked onclick="enableTopValues(this.checked)">
-    <label for="enableTopValues">Display only the top </label>
+    <table style="margin-left: auto;margin-right: auto;">
+        <td style="padding-right: 100px;">
+            <input type="checkbox" id="enableTopValues" name="enableTopValues" checked onclick="enableTopValues(this.checked)">
+            <label for="enableTopValues">Display only the top </label>
 
-    <input type="number" value=6 id="topValsCount" style=" width: 50px;" onkeyup="changeTopValues(this.value)"  oninput="changeTopValues(this.value)">
+            <input type="number" value=6 id="topValsCount" style=" width: 50px;" onkeyup="changeTopValues(this.value)"  oninput="changeTopValues(this.value)">
 
-    <label for="enableTopValues"> values</label>
-    <br>
-    <input type="radio" id="rStacked" name="graphConfig" value="stacked" checked onclick="changeStacking(true)"> Stacked Graph<br>
-    <input type="radio" id="rSeperate" name="graphConfig" value="seperate" onclick="changeStacking(false)"> Seperate Graphs<br>
+            <label for="enableTopValues"> values</label>
+            <br>
+            <input type="radio" id="rStacked" name="graphConfig" value="stacked" checked onclick="changeStacking(true)"> Stacked Graph<br>
+            <input type="radio" id="rSeperate" name="graphConfig" value="seperate" onclick="changeStacking(false)"> Seperate Graphs<br>
+        </td>
+    <td style="padding-left: 100px;">
+        <!-- This block can be reused as many times as needed -->
+        <section class="range-slider">
+        <span class="rangeValues"></span>
+        <input value="0" min="0" max="1" step="0.05" type="range" id="sliderMin" onchange="sliderChange()" onmousemove="sliderChange()">
+        <input value="1" min="0" max="1" step="0.05" type="range" id="sliderMax" onchange="sliderChange()" onmousemove="sliderChange()">
+        </section>
+        </td>
+    </table>
 </div>
 </body>
 </html>
