--- a/final/index.html
+++ b/final/index.html
@@ -11,7 +11,8 @@
     <link rel="icon" href="data:;base64,iVBORw0KGgo=">
 </head>
 
-<body>
+
+<body style = "font-family: system-ui;font-weight: 400;">
 
     <nav class="navbar navbar-default">
         <div class="container">
@@ -58,6 +59,7 @@
     </table>
 </div>
 </body>
+
 </html>
 
 
